# photography

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
_server/: .env.example  .gitignore
_server/_server/: settings.py  urls.py
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_reservationconfirmed.py  0003_alter_reservationrequest_closedate_and_more.py  0004_reservationconfirmed_time_and_more.py
_server/core/templates/core/: index.html
_server/registration/: admin.py  urls.py  views.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html  welcome.html
_server/staff/: forms.py  urls.py  views.py
_server/staff/templates/staff/: base.html  finalize.html  index.html
client/: .gitignore  package-lock.json  package.json
client/src/: App.css  App.jsx  HomePage.css  HomePage.jsx  ImageGallery.jsx  NavBar.css  NavBar.jsx  ReservationCard.jsx  ReservationList.jsx  ReservationsPage.css  ReservationsPage.jsx  SamplesPage.css  SamplesPage.jsx  index.css  main.jsx
planning/: ProjectProposal.md  ProjectProposal.txt  ProjectStatus.md  plan.md
