[tool.poetry]
name = "photography"
version = "0.1.0"
description = "A website for a photographer"
authors = ["Nate McKenize <a02298217@usu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.0"
requests = "^2.32.2"
python-dotenv = "^1.2.0"
pillow = "^12.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
